<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.pacificwebconsulting.runtime</groupId>
  <artifactId>runtime-microservice</artifactId>
  <version>2.0.5-SNAPSHOT</version>
  <name>Runtime Microservice</name>
  <description>Runtime web drivers and GRID components microservice</description>
  <url>https://github.com/AnthonyL22/runtime-microservice</url>
  <licenses>
    <license>
      <name>The Clear BSD License</name>
      <url>http://svn.openlayers.org/trunk/openlayers/license.txt</url>
      <distribution>manual</distribution>
      <comments>For any parts of OpenLayers</comments>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Anthony Lombardo</name>
      <email>AnthonyL22@gmail.com</email>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:https://github.com/AnthonyL22/runtime-microservice</connection>
    <developerConnection>scm:git:https://github.com/AnthonyL22/runtime-microservice</developerConnection>
    <tag>HEAD</tag>
    <url>scm:git:https://github.com/AnthonyL22/runtime-microservice</url>
  </scm>
  <distributionManagement>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>
  <properties>
    <commons.lang.version>2.6</commons.lang.version>
    <core-microservice.version>3.0.1</core-microservice.version>
    <driver.key.chrome.linux64>119.0.6045.105/linux64/chromedriver-linux64.zip</driver.key.chrome.linux64>
    <driver.key.chrome.mac64>119.0.6045.105/mac-x64/chromedriver-mac-x64.zip</driver.key.chrome.mac64>
    <driver.key.chrome.win64>119.0.6045.105/win32/chromedriver-win32.zip</driver.key.chrome.win64>
    <driver.key.edge.mac64>116.0.1938.62/edgedriver_mac64.zip</driver.key.edge.mac64>
    <driver.key.edge.win64>116.0.1938.62/edgedriver_win64.zip</driver.key.edge.win64>
    <driver.key.gecko.linux64>v0.32.2/geckodriver-v0.32.2-linux64.tar.gz</driver.key.gecko.linux64>
    <driver.key.gecko.mac64>v0.32.2/geckodriver-v0.32.2-macos.tar.gz</driver.key.gecko.mac64>
    <driver.key.gecko.win64>v0.32.2/geckodriver-v0.32.2-win64.zip</driver.key.gecko.win64>
    <driver.key.ie.win32>3.150/IEDriverServer_Win32_3.150.0.zip</driver.key.ie.win32>
    <driver.key.ie.win64>3.150/IEDriverServer_x64_3.150.0.zip</driver.key.ie.win64>
    <driver.key.safari>2.53/SafariDriver.safariextz</driver.key.safari>
    <driver.key.selenium.server.standalone>4.0/selenium-server-standalone-4.0.0-alpha-2.zip</driver.key.selenium.server.standalone>
    <exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
    <format-maven-plugin.version>2.0.1</format-maven-plugin.version>
    <jacoco.version>0.7.5.201505241946</jacoco.version>
    <java.version>11</java.version>
    <junit.version>4.13.2</junit.version>
    <maven-assembly-plugin.version>2.5.5</maven-assembly-plugin.version>
    <maven-clean-plugin.version>2.4.1</maven-clean-plugin.version>
    <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
    <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
    <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
    <maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
    <maven-release-plugin.version>2.3.2</maven-release-plugin.version>
    <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
    <maven-scm-plugin.version>1.8.1</maven-scm-plugin.version>
    <maven-scm-provider-gitxexe.version>1.9</maven-scm-provider-gitxexe.version>
    <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
    <maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version>
    <mockito.version>1.10.19</mockito.version>
    <skip.plugins>false</skip.plugins>
    <sortpom-maven-plugin.version>2.6.0</sortpom-maven-plugin.version>
    <surefire-plugin.version>2.19.1</surefire-plugin.version>
    <versions-maven-plugin.version>2.1</versions-maven-plugin.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>com.pacificwebconsulting.core</groupId>
      <artifactId>core-microservice</artifactId>
      <version>${core-microservice.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-lang</groupId>
      <artifactId>commons-lang</artifactId>
      <version>${commons.lang.version}</version>
    </dependency>
    <dependency>
      <groupId>org.codehaus.plexus</groupId>
      <artifactId>plexus-archiver</artifactId>
      <version>2.2</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.github.ekryd.sortpom</groupId>
          <artifactId>sortpom-maven-plugin</artifactId>
          <version>${sortpom-maven-plugin.version}</version>
          <configuration>
            <verifyFail>Stop</verifyFail>
            <predefinedSortOrder>recommended_2008_06</predefinedSortOrder>
            <sortDependencies>scope,groupId,artifactId</sortDependencies>
            <sortProperties>true</sortProperties>
            <expandEmptyElements>false</expandEmptyElements>
            <indentSize>2</indentSize>
            <createBackupFile>false</createBackupFile>
          </configuration>
          <executions>
            <execution>
              <id>sortpom-verify</id>
              <goals>
                <goal>verify</goal>
              </goals>
              <phase>verify</phase>
            </execution>
            <execution>
              <id>sortpom-sort</id>
              <goals>
                <goal>sort</goal>
              </goals>
              <phase>validate</phase>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${surefire-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire-plugin.version}</version>
        <configuration>
          <forkCount>3</forkCount>
          <reuseForks>true</reuseForks>
          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.github.ekryd.sortpom</groupId>
        <artifactId>sortpom-maven-plugin</artifactId>
        <version>${sortpom-maven-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>${maven-gpg-plugin.version}</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <goals>
              <goal>sign</goal>
            </goals>
            <phase>verify</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>${maven-source-plugin.version}</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
            <phase>post-integration-test</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven-javadoc-plugin.version}</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>${exec-maven-plugin.version}</version>
        <executions>
          <execution>
            <id>fetch-drivers-api</id>
            <goals>
              <goal>java</goal>
            </goals>
            <phase>compile</phase>
            <configuration>
              <arguments>
                <argument>${driver.key.selenium.server.standalone}</argument>
                <argument>${driver.key.gecko.win64}</argument>
                <argument>${driver.key.gecko.mac64}</argument>
                <argument>${driver.key.gecko.linux64}</argument>
                <argument>${driver.key.edge.mac64}</argument>
                <argument>${driver.key.edge.win64}</argument>
                <argument>${driver.key.chrome.win64}</argument>
                <argument>${driver.key.chrome.linux64}</argument>
                <argument>${driver.key.chrome.mac64}</argument>
                <argument>${driver.key.ie.win32}</argument>
                <argument>${driver.key.ie.win64}</argument>
                <argument>${driver.key.safari}</argument>
              </arguments>
              <mainClass>com.pwc.runtime.DriverManager</mainClass>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>${maven-assembly-plugin.version}</version>
        <configuration>
          <descriptors>
            <descriptor>src/main/assembly/zip.xml</descriptor>
          </descriptors>
        </configuration>
        <executions>
          <execution>
            <id>create-zip-distribution</id>
            <goals>
              <goal>single</goal>
            </goals>
            <phase>compile</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>${maven-clean-plugin.version}</version>
        <executions>
          <execution>
            <id>cleanup-unzipping</id>
            <goals>
              <goal>clean</goal>
            </goals>
            <phase>test-compile</phase>
            <configuration>
              <excludeDefaultDirectories>true</excludeDefaultDirectories>
              <filesets>
                <fileset>
                  <directory>${project.build.outputDirectory}/grid</directory>
                </fileset>
                <fileset>
                  <directory>${project.build.outputDirectory}/drivers</directory>
                </fileset>
              </filesets>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>${maven-release-plugin.version}</version>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.scm</groupId>
            <artifactId>maven-scm-provider-gitexe</artifactId>
            <version>${maven-scm-provider-gitxexe.version}</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>${versions-maven-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.version}</version>
        <executions>
          <execution>
            <id>default-prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>default-prepare-agent-integration</id>
            <goals>
              <goal>prepare-agent-integration</goal>
            </goals>
          </execution>
          <execution>
            <id>default-report</id>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
          <execution>
            <id>default-report-integration</id>
            <goals>
              <goal>report-integration</goal>
            </goals>
          </execution>
          <execution>
            <id>default-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <rules />
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-scm-plugin</artifactId>
        <version>${maven-scm-plugin.version}</version>
        <configuration>
          <tag>${project.artifactId}-${project.version}</tag>
        </configuration>
      </plugin>
      <plugin>
        <groupId>net.revelc.code.formatter</groupId>
        <artifactId>formatter-maven-plugin</artifactId>
        <version>${format-maven-plugin.version}</version>
        <configuration>
          <skip>${skip.plugins}</skip>
          <encoding>UTF-8</encoding>
          <compilerSource>${java.version}</compilerSource>
          <compilerCompliance>${java.version}</compilerCompliance>
          <compilerTargetPlatform>${java.version}</compilerTargetPlatform>
          <configFile>${project.basedir}/eclipse-java-pwc-style.xml</configFile>
          <excludes>
            <exclude>**/framework/data/**/*.java</exclude>
            <exclude>**/enums/**/*.java</exclude>
            <exclude>**/provider/*.java</exclude>
          </excludes>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>validate</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${maven.checkstyle.plugin.version}</version>
        <configuration>
          <skip>${skip.plugins}</skip>
          <configLocation>checkstyle.xml</configLocation>
          <consoleOutput>true</consoleOutput>
          <failsOnError>true</failsOnError>
          <failOnViolation>true</failOnViolation>
          <violationSeverity>warning</violationSeverity>
          <includeTestSourceDirectory>true</includeTestSourceDirectory>
          <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
          <testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
          <outputFile>${basedir}/target/checkstyle/checkstyle-output.xml</outputFile>
          <cacheFile>${basedir}/target/checkstyle/checkstyle-cachefile</cacheFile>
          <excludes>**/unit/**/*,**/resources/*</excludes>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
